fix/ change userId to Long